# pulsed-power-ml

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  azure-pipelines.yml  dvc.yaml  gitlab-ci.yml  luigi.cfg  main.py  metrics.json  mock_example.py  nilm.py  nilm_raw.py  requirements.txt  roc.csv  setup.py
.dvc/: config
.github/workflows/: ci_pulsed_power_monitoring.yml  ci_visualization.yml  ci_worker.yml  codeql.yml
data/raw/: .gitignore  example_data.csv.dvc  wine_quality.csv.dvc
docs/: conf.py  index.rst
it_ticket_analysis/: main.py
it_ticket_analysis/data/: Task2.py
references/: README.md  pipeline_structures.drawio
references/data_dictionaries/: README.md  template_raw_data_dict.csv
references/data_report/: data_definition.md  data_pipeline.txt  data_summary_report.md
references/model/: README.md  final_report.md
references/model/model_1/: model_report.md
references/project/: README.md  charter.md
src/: README.md
src/common/api/: daq_api.h
src/data/: Task1.py  Task2.py
src/gr-pulsed_power/: CMakeLists.txt  MANIFEST.md  README.md
src/gr-pulsed_power/.conda/: README.md
src/gr-pulsed_power/apps/: CMakeLists.txt
src/gr-pulsed_power/docs/: CMakeLists.txt  README.pulsed_power
src/gr-pulsed_power/examples/: null_sink.grc
src/gr-pulsed_power/flowgraphs/: DAQ_Demo_RHE_FFT.grc  DAQ_Demo_RHE_FFT.py  RHE_FFT_Test.grc  RHE_FFT_Test.py  RecordTrainingData_GRC_2022-10-12.grc  Scheinleistung_Low_Frequency.grc  Scheinleistung_Low_Frequency.py  flowgraph_picoscope.grc  flowgraph_picoscope_three_phases.grc  flowgraph_simulated.grc  flowgraph_simulated_new.grc  mod_dreiphasig.grc  mod_dreiphasig_uebersichtlicher.grc  three_phases_simulation.py
src/gr-pulsed_power/flowgraphs/three_phases_simulation/: CMakeLists.txt  three_phases_simulation.cpp  three_phases_simulation.hpp
src/gr-pulsed_power/grc/: CMakeLists.txt  pulsed_power_daq_mains_frequency_calc.block.yml  pulsed_power_daq_picoscope_4000a_source.block copy.yml  pulsed_power_daq_picoscope_4000a_source.block.yml  (+13 more)
src/gr-pulsed_power/python/pulsed_power_daq/bindings/: CMakeLists.txt  CTestTestfile.cmake  Makefile  bind_oot_file.py  cmake_install.cmake  failed_conversions.txt  mains_frequency_calc_python.cc  picoscope_4000a_source_python.cc  power_calc_cc_python.cc  power_calc_ff_python.cc  python_bindings.cc
src/gr-pulsed_power/python/pulsed_power_daq/bindings/docstrings/: mains_frequency_calc_pydoc_template.h  picoscope_4000a_source_pydoc_template.h  status_pydoc_template.h  tags_pydoc_template.h
src/implot_visualization/: .gitmodules  CMakeLists.txt  Makefile  cmake_build.sh  cmake_clean.sh  gruntfile.js  imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  implot.cpp  implot.h  implot_demo.cpp  implot_internal.h  implot_items.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h  main.cpp  package-lock.json  package.json  run_client.sh
src/implot_visualization/app/: CMakeLists.txt  Makefile  README.md  deserialize_json.h  emscripten_fetch.cpp  main.cpp  main_current.cpp  main_nilm.cpp  main_power.cpp  main_ppem.cpp  main_u0i0.cpp  main_voltage.cpp  shell_minimal.html
src/implot_visualization/app/app_header/: CMakeLists.txt  fair_header.h
src/implot_visualization/app/assets/poe-vetica-monospace-font/: info.txt
src/implot_visualization/app/deserializer/: CMakeLists.txt  deserialize_json.cpp  deserialize_json.h
src/implot_visualization/app/fetch/: CMakeLists.txt  emscripten_fetch.cpp  emscripten_fetch.h
src/implot_visualization/app/plot_tools/: CMakeLists.txt  plot_tools.cpp  plot_tools.h
src/implot_visualization/example_emscripten_opengl3/: .gitignore  Makefile  README.md  main.cpp
src/implot_visualization/example_emscripten_opengl3/web/: index.js  index.wasm
src/implot_visualization/test/: CMakeLists.txt  deserialize_json_tests.cpp
src/implot_visualization_nilm/: CMakeLists.txt
src/implot_visualization_nilm/app/plot_tools/: CMakeLists.txt  plot_tools.cpp  plot_tools.h
src/it_ticket_analysis/: main.py  train.py  train_tensorboard.py
src/kol_db/: main.py  train_tensorboard.py
src/opencmw_counter/: CMakeLists.txt  README.md
src/opencmw_counter/cmake/: StandardProjectSettings.cmake
src/opencmw_counter/src/: CMakeLists.txt  MajordomoRest_example.cpp  opencmw_counter.cpp
src/opencmw_counter/src/assets/mustache/: default.mustache
src/opencmw_worker/: CMakeLists.txt  README.md
src/opencmw_worker/cmake/: Dependencies.cmake  Findpicoscope.cmake
src/opencmw_worker/src/: CMakeLists.txt  CounterWorker.hpp  DataFetcher.hpp  FrequencyDomainWorker.hpp  GRFlowGraph.hpp  GRFlowGraphs.hpp  GRThreePhaseFlowGraph.hpp  InferenceTool.cpp  LimitingCurveWorker.hpp  MajordomoRestBroker.cpp  NilmDataWorker.hpp  NilmPowerWorker.hpp  NilmPredictWorker.hpp  NilmWeekWorker.hpp  PulsedPowerService.cpp  Ringbuffer.hpp  TimeDomainWorker.hpp
src/opencmw_worker/src/integrator/: PowerIntegrator.hpp
src/opencmw_worker/src/model/TFGuptaModel_v1-0/: fingerprint.pb  saved_model.pb
src/opencmw_worker/src/model/TFGuptaModel_v1-0/variables/: variables.data-00000-of-00001  variables.index
src/opencmw_worker/src/model/TFGuptaModel_v2-0/variables/: variables.data-00000-of-00001  variables.index
src/opencmw_worker/src/model/dummy_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
src/opencmw_worker/src/model/dummy_model/variables/: variables.data-00000-of-00001  variables.index
src/opencmw_worker/src/model/nilm_model/: fingerprint.pb  saved_model.pb
src/opencmw_worker/src/model/nilm_model/variables/: variables.data-00000-of-00001  variables.index
src/opencmw_worker/test/: CMakeLists.txt  helpers.hpp  integrator_tests.cpp  time_domain_worker_rest_tests.cpp
src/opencmw_worker/test/data/test_read_real/: month_usage.txt  time_values.txt
src/prometheus/: README.md  json_exporter.py  prometheus.yml
src/pulsed_power_ml/: main.py  train.py
src/template_project/: main.py
test/: test_environment.py
(+176 files in other folders)
